<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.ikm.komet</groupId>
        <artifactId>komet-parent</artifactId>
        <version>1.58.0-kec-jan-24-SNAPSHOT</version>
    </parent>
    <artifactId>kview</artifactId>
    <dependencies>
        <dependency>
            <groupId>org.carlfx</groupId>
            <artifactId>cognitive</artifactId>
        </dependency>
        <dependency>
            <groupId>org.carlfx</groupId>
            <artifactId>axonic</artifactId>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>framework</artifactId>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>search</artifactId>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>search-provider</artifactId>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>composer</artifactId>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>navigator</artifactId>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>progress</artifactId>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>classification</artifactId>
        </dependency>
        <dependency>
            <groupId>one.jpro</groupId>
            <artifactId>jpro-webapi</artifactId>
        </dependency>
        <dependency>
            <groupId>one.jpro.platform</groupId>
            <artifactId>jpro-auth-core</artifactId>
        </dependency>
        <dependency>
            <groupId>one.jpro.platform</groupId>
            <artifactId>jpro-file</artifactId>
        </dependency>
        <!--        testing -->
        <dependency>
            <groupId>one.jpro.platform.jpms</groupId>
            <artifactId>testfx-core</artifactId>
        </dependency>
        <dependency>
            <groupId>one.jpro.platform.jpms</groupId>
            <artifactId>testfx-junit5</artifactId>
        </dependency>
        <dependency>
            <groupId>one.jpro.platform.jpms</groupId>
            <artifactId>openjfx-monocle</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>executor</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>executor-provider</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>entity-provider</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>data-mvstore-provider</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>data-spinedarray-provider</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>data-ephemeral-provider</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>dev.ikm.komet</groupId>
            <artifactId>knowledge-layout</artifactId>
        </dependency>
        <dependency>
            <groupId>dev.ikm.jpms</groupId>
            <artifactId>jgit</artifactId>
        </dependency>
        <dependency>
            <groupId>dev.ikm.tinkar</groupId>
            <artifactId>entity</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
